@@ -2,6 +2,6 @@ module github.com/tokenomy/tokenomy-go
 
 go 1.13
 
-require github.com/shuLhan/share v0.16.1-0.20200618041330-0667cf8422c3
+require github.com/shuLhan/share v0.17.1-0.20200706072119-cb1b7dc8c8a1
 
 //replace github.com/shuLhan/share => ../share
