@@ -2,6 +2,16 @@
 
 ==  tokenomy-go v0.8.0 (2020.07.xx)
 
+===  Breaking changes
+
+Change the API paths from `trades` into `orders`,
+
+* `/v2/user/trades/closed` become `/v2/user/orders/closed`
+* `/v2/user/trade` become `/v2/user/order`
+* `/v2/user/trades/open` become `/v2/user/orders/open`
+* Return the coin, base, and price as string with eight digit precision
+
+
 ===  Enhancements
 
 * trade: remove unused field Fee
